tests/paczka1/fuzzy1/74106650.err
Error in line 6: CJDpqI9 S965 61,9
Error in line 14: SVxpwZPB A67 4,8
Error in line 18: SVxpwZPB S172 82,3
Error in line 22: SVxpwZPB A67 45,1
Error in line 24: QOhhg S172 457,2
